fix add card btn spacing

--- a/style.css
+++ b/style.css
@@ -27,13 +27,14 @@ h2 {display:block;font-size:16px;line-height:20px;font-weight:bold;margin:0;text
 .menu a:hover {background:#203040;}
 .menu a.activeBoard {color:var(--accent);background:none;border-left:2px solid var(--accent);border-right:2px solid var(--accent);}
 
-/* MAIN CARDS */
+/* MAIN */
 .main {display:flex;flex-flow:row nowrap;justify-content:start;align-items:start;position:absolute;top:33px;left:220px;right:0;bottom:0;padding:10px;background-size:cover;background-position:center;box-sizing:border-box;overflow-y:hidden;overflow-x:auto;scrollbar-width:thin;transition:left ease .5s;}
 .main.vertical {flex-wrap:wrap;row-gap:10px;overflow-y:auto;overflow-x:hidden;}
 .dragster {position:absolute;pointer-events:none;contain:content;}
-/* lists */
-.list {display:flex;flex-flow:column nowrap;flex:0 0 284px;width:284px;max-height:100%;margin-right:10px;padding:5px 0;background-color:#101204;border-radius:9px;box-sizing:border-box;contain:content;}
-.listTitle {display:flex;flex-flow:row nowrap;justify-content:start;align-items:start;margin:0 8px 4px 8px;}
+
+/* LISTS */
+.list {display:flex;flex-flow:column nowrap;flex:0 0 284px;width:284px;max-height:100%;margin-right:10px;background-color:#101204;border-radius:9px;box-sizing:border-box;contain:content;}
+.listTitle {display:flex;flex-flow:row nowrap;justify-content:start;align-items:start;margin:5px 8px 4px 8px;}
 .listTitle .listName {flex:1 1 50%;padding:0 0 2px 2px;margin-right:5px;border-radius:6px;white-space:pre-wrap;}
 .listTitle .listName:focus {outline:2px solid var(--accent);outline-offset:2px;}
 .moveListBtn, .deleteListBtn {color:#bbb;background:none;font-size:18px;line-height:18px;}
@@ -45,16 +46,15 @@ h2 {display:block;font-size:16px;line-height:20px;font-weight:bold;margin:0;text
 #newListBtn {padding:3px 7px;background:none;border:2px solid var(--accent);border-radius:9px;color:#ccc;font-size:12px;}
 #newListBtn:hover {background:#0002;}
 
-/* cards */
-.cardContainer {padding:0 8px;min-height:12px;margin:-6px 0;overflow-y:auto;scrollbar-width:thin;}
-.card {background-color:#22272B;border-radius:7px;margin:6px 0;padding:0 8px 6px 8px;box-sizing:border-box;white-space:pre-wrap;cursor:pointer;}
-.addCardBtn {border-radius:7px;margin:4px 8px 0 8px;padding:1px 6px;cursor:pointer;}
+/* CARDS */
+.cardContainer {padding:0 8px;min-height:12px;overflow-y:auto;scrollbar-width:thin;}
+.card {background-color:#22272B;border-radius:7px;margin:6px 0 0 0;padding:0 8px 6px 8px;box-sizing:border-box;white-space:pre-wrap;cursor:pointer;}
+.cardContainer .card:first-child {margin-top:0;}
+.addCardBtn {border-radius:7px;margin:4px 8px;padding:2px 6px;cursor:pointer;}
 .card:hover, .addCardBtn:hover {background-color:#282e34;}
 .hasDescription {border-left:4px solid var(--accent);}
 
 /* POPUPS */
-
-/* EDIT BOARD */
 #popupBG {display:none;flex-flow:row nowrap;justify-content:center;align-items:center;position:fixed;inset:0;z-index:2;background-color:#80808060;content-visibility:auto;contain:strict;}
 #newBoardBox, #editBoardBox, #importExportBox {display:none;overflow:hidden;border-radius:13px;background:linear-gradient(150deg,var(--main-bg),var(--accent),var(--main-bg),var(--accent));}
 .popupBody {text-align:center;padding:6px 8px 0 8px;}
